--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 </head>
 <body class="bg-gray-900 text-white">
 
-    <!-- Form to input name -->
+    <!-- Header with site name and user interaction -->
     <div class="container mx-auto my-8 p-8 text-center">
         <h1 class="text-3xl font-bold mb-4">Welcome to Stickman's Idiot Cave!</h1>
         <h2 class="mb-8">Enter your name to get started:</h2>
 
+        <!-- Name Input Form -->
         <form id="nameForm" class="flex justify-center">
             <input type="text" id="nameInput" class="border p-2 rounded-l-lg" placeholder="Your Name" required>
             <button type="submit" class="bg-blue-500 text-white p-2 rounded-r-lg">Submit</button>
@@ -58,6 +59,12 @@
     <div class="container mx-auto my-8 p-8 text-center">
         <h2 class="text-2xl font-bold mb-4">UnbI0ck3d Gmes</h2>
         <a href="asian/homepage.html" class="text-blue-500">Play UnbI0ck3d Gmes</a>
+    </div>
+
+    <!-- WebSpam Section (Webhook sender) -->
+    <div class="container mx-auto my-8 p-8 text-center">
+        <h2 class="text-2xl font-bold mb-4">WebSpam (Discord Webhook)</h2>
+        <a href="webspam.html" class="text-blue-500">Send a Webhook to Discord</a>
     </div>
 
     <script>
