--- a/index.html
+++ b/index.html
@@ -9,86 +9,184 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
+            background-color: #121212;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
         }
         .confetti { position: absolute; top: 0; left: 0; z-index: 9999; }
+        .btn:hover {
+            transform: scale(1.05);
+            opacity: 0.9;
+        }
+        .project-card:hover {
+            background-color: #1f1f1f;
+            transform: scale(1.05);
+        }
+        .header-title {
+            font-size: 4rem;
+            background: linear-gradient(90deg, #ff4f7e, #6a3b9d, #00bcd4);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            animation: gradientAnimation 5s ease infinite;
+            font-weight: 900;
+        }
+        @keyframes gradientAnimation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+        .section-header {
+            font-size: 2.5rem;
+            font-weight: 700;
+            color: white;
+            margin-bottom: 2rem;
+            letter-spacing: 2px;
+        }
+        .input-field {
+            background-color: #333;
+            color: #fff;
+            border: 2px solid #4e4e4e;
+            padding: 1rem;
+            font-size: 1rem;
+            border-radius: 0.375rem;
+            width: 300px;
+            outline: none;
+        }
+        .input-field:focus {
+            border-color: #ff4f7e;
+            background-color: #1f1f1f;
+        }
+        .btn {
+            padding: 10px 20px;
+            background-color: #ff4f7e;
+            color: white;
+            font-weight: 700;
+            border-radius: 10px;
+            border: none;
+            cursor: pointer;
+            transition: transform 0.3s, opacity 0.3s;
+        }
+        .btn:focus {
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.2);
+        }
+        .project-card {
+            background: #1a1a1a;
+            padding: 2rem;
+            border-radius: 15px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            margin-bottom: 2rem;
+            transition: all 0.3s ease;
+        }
+        .project-card h3 {
+            font-size: 1.8rem;
+            margin-bottom: 1.2rem;
+        }
+        .project-card p {
+            font-size: 1rem;
+            margin-bottom: 1.5rem;
+            color: #b3b3b3;
+        }
+        .gradient-button {
+            display: inline-block;
+            padding: 10px 25px;
+            background: linear-gradient(90deg, #ff4f7e, #6a3b9d, #00bcd4);
+            color: white;
+            font-weight: 700;
+            border-radius: 30px;
+            text-decoration: none;
+            transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+        .gradient-button:hover {
+            transform: scale(1.1);
+            opacity: 0.9;
+        }
+        .project-card-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 3rem;
+            margin-top: 2rem;
+        }
     </style>
 </head>
-<body class="bg-gray-900 text-white">
+<body>
 
-    <!-- Header with site name and introduction -->
-    <header class="text-center py-10">
-        <h1 class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 via-purple-600 to-indigo-800 mb-6">
-            Welcome to Stickman's Idiot Cave!
+    <!-- Header Section -->
+    <header class="text-center py-16">
+        <h1 class="header-title mb-6">
+            Welcome to Stickman's Idiot Cave
         </h1>
-        <p class="text-xl mb-4">A place for all kinds of funny, useless, and cool projects!</p>
-        <p class="text-lg">Explore, have fun, and maybe get confused. 😎</p>
+        <p class="text-xl mb-6">A place for quirky projects and random fun.</p>
+        <p class="text-lg">Prepare to be entertained... or confused, depending on your perspective.</p>
     </header>
 
-    <!-- User Name Input Form (For fun) -->
-    <section class="container mx-auto text-center py-10">
-        <h2 class="text-2xl font-semibold mb-4">Enter Your Name</h2>
+    <!-- User Name Input -->
+    <section class="container mx-auto text-center py-12">
+        <h2 class="section-header">Enter Your Name</h2>
         <form id="nameForm" class="flex justify-center">
-            <input type="text" id="nameInput" class="border-2 border-blue-500 text-gray-900 p-2 rounded-l-lg focus:outline-none" placeholder="Enter your name" required>
-            <button type="submit" class="bg-blue-600 text-white p-2 rounded-r-lg hover:bg-blue-700">Submit</button>
+            <input type="text" id="nameInput" class="input-field" placeholder="Enter your name" required>
+            <button type="submit" class="btn ml-4">Submit</button>
         </form>
-        <p id="greetingMessage" class="mt-4 text-lg"></p>
+        <p id="greetingMessage" class="mt-4 text-lg text-gray-400"></p>
     </section>
 
     <!-- Featured Projects -->
-    <section class="container mx-auto py-10">
-        <h2 class="text-3xl font-semibold text-center mb-8">Featured Projects</h2>
+    <section class="container mx-auto py-12">
+        <h2 class="section-header">Featured Projects</h2>
+        <div class="project-card-container">
+            <!-- Webordnilap Project -->
+            <div class="project-card">
+                <h3>Webordnilap</h3>
+                <p>Create funny word reversals (emordnilap) for random words!</p>
+                <a href="emordnilap.html" class="gradient-button">Try Webordnilap</a>
+            </div>
 
-        <!-- Webordnilap Project -->
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg mb-6 hover:bg-gray-700">
-            <h3 class="text-2xl font-semibold mb-2">Webordnilap</h3>
-            <p class="text-gray-300 mb-4">Create fun word reversals (emordnilap) for random words!</p>
-            <a href="emordnilap.html" class="text-blue-500 hover:underline">Try Webordnilap</a>
-        </div>
+            <!-- Text Scrambler -->
+            <div class="project-card">
+                <h3>Text Scrambler</h3>
+                <p>Scramble your text and challenge others to decode it!</p>
+                <a href="scramble.html" class="gradient-button">Try the Text Scrambler</a>
+            </div>
 
-        <!-- Text Scrambler -->
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg mb-6 hover:bg-gray-700">
-            <h3 class="text-2xl font-semibold mb-2">Text Scrambler</h3>
-            <p class="text-gray-300 mb-4">Scramble your text for fun or challenge your friends!</p>
-            <a href="scramble.html" class="text-blue-500 hover:underline">Try the Text Scrambler</a>
-        </div>
+            <!-- FreeVRAM Joke -->
+            <div class="project-card">
+                <h3>FreeVRAM</h3>
+                <p>The ultimate joke: Claim your free VRAM!</p>
+                <a href="vram.html" class="gradient-button">Claim Free VRAM</a>
+            </div>
 
-        <!-- FreeVRAM Joke -->
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg mb-6 hover:bg-gray-700">
-            <h3 class="text-2xl font-semibold mb-2">FreeVRAM</h3>
-            <p class="text-gray-300 mb-4">The ultimate joke: Claim your free VRAM!</p>
-            <a href="vram.html" class="text-blue-500 hover:underline">Claim Free VRAM!</a>
-        </div>
-
-        <!-- UnbI0ck3d Gmes -->
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg mb-6 hover:bg-gray-700">
-            <h3 class="text-2xl font-semibold mb-2">UnbI0ck3d Gmes</h3>
-            <p class="text-gray-300 mb-4">Play blocked games without restrictions!</p>
-            <a href="asian/homepage.html" class="text-blue-500 hover:underline">Play UnbI0ck3d Gmes</a>
-        </div>
-    </section>
-
-    <!-- WebSpam (Discord Webhook Sender) -->
-    <section class="container mx-auto py-10">
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg mb-6 hover:bg-gray-700">
-            <h3 class="text-2xl font-semibold mb-2">WebSpam - Discord Webhook Sender</h3>
-            <p class="text-gray-300 mb-4">Send fun webhooks to a Discord channel!</p>
-            <a href="webspam.html" class="text-blue-500 hover:underline">Send a Webhook to Discord</a>
+            <!-- UnbI0ck3d Gmes -->
+            <div class="project-card">
+                <h3>UnbI0ck3d Gmes</h3>
+                <p>Play blocked games without restrictions!</p>
+                <a href="asian/homepage.html" class="gradient-button">Play UnbI0ck3d Gmes</a>
+            </div>
         </div>
     </section>
 
-    <!-- Confetti Effect (Triggered by Name Submission) -->
+    <!-- WebSpam Section -->
+    <section class="container mx-auto py-12">
+        <div class="project-card">
+            <h3 class="text-2xl font-semibold mb-4">WebSpam - Discord Webhook Sender</h3>
+            <p class="text-gray-300 mb-4">Send fun webhooks to your Discord channel with a click!</p>
+            <a href="webspam.html" class="gradient-button">Send a Webhook</a>
+        </div>
+    </section>
+
+    <!-- Confetti Effect Script -->
     <script>
-        // Handle the form submission
         document.getElementById("nameForm").addEventListener("submit", function (e) {
             e.preventDefault();
             const name = document.getElementById("nameInput").value;
             document.getElementById("greetingMessage").textContent = `Welcome, ${name}! You're now part of the cave.`;
 
-            // Trigger confetti effect
             startConfetti();
         });
 
-        // Confetti effect
         function startConfetti() {
             const duration = 1000;
             const end = Date.now() + duration;
