--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stickman's Idiot Cave</title>
+    <title>Stickman's site</title>
     <script src="https://cdn.jsdelivr.net/npm/tailwindcss@3.0.0/dist/tailwind.min.css"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.0.4"></script>
     <style>
@@ -118,10 +118,10 @@
     <!-- Header Section -->
     <header class="text-center py-16">
         <h1 class="header-title mb-6">
-            Welcome to Stickman's Idiot Cave
+            Welcome to Stickman's site.
         </h1>
-        <p class="text-xl mb-6">A place for quirky projects and random fun.</p>
-        <p class="text-lg">Prepare to be entertained... or confused, depending on your perspective.</p>
+        <p class="text-xl mb-6">Yeah just my projects.</p>
+        <p class="text-lg">What the sigma.</p>
     </header>
 
     <!-- User Name Input -->
@@ -141,29 +141,29 @@
             <!-- Webordnilap Project -->
             <div class="project-card">
                 <h3>Webordnilap</h3>
-                <p>Create funny word reversals (emordnilap) for random words!</p>
+                <p>An online palindrome</p>
                 <a href="emordnilap.html" class="gradient-button">Try Webordnilap</a>
             </div>
 
             <!-- Text Scrambler -->
             <div class="project-card">
                 <h3>Text Scrambler</h3>
-                <p>Scramble your text and challenge others to decode it!</p>
-                <a href="scramble.html" class="gradient-button">Try the Text Scrambler</a>
+                <p>Mess up your text for fun!</p>
+                <a href="scramble.html" class="gradient-button">try the text scrambler</a>
             </div>
 
             <!-- FreeVRAM Joke -->
             <div class="project-card">
                 <h3>FreeVRAM</h3>
-                <p>The ultimate joke: Claim your free VRAM!</p>
+                <p>wow free vram</p>
                 <a href="vram.html" class="gradient-button">Claim Free VRAM</a>
             </div>
 
             <!-- UnbI0ck3d Gmes -->
             <div class="project-card">
-                <h3>UnbI0ck3d Gmes</h3>
-                <p>Play blocked games without restrictions!</p>
-                <a href="asian/homepage.html" class="gradient-button">Play UnbI0ck3d Gmes</a>
+                <h3>unblocked gmes</h3>
+                <p>unblocked gmes!</p>
+                <a href="asian/homepage.html" class="gradient-button">play unblocked gmes</a>
             </div>
         </div>
     </section>
@@ -171,8 +171,8 @@
     <!-- WebSpam Section -->
     <section class="container mx-auto py-12">
         <div class="project-card">
-            <h3 class="text-2xl font-semibold mb-4">WebSpam - Discord Webhook Sender</h3>
-            <p class="text-gray-300 mb-4">Send fun webhooks to your Discord channel with a click!</p>
+            <h3 class="text-2xl font-semibold mb-4">WebSpam - wow troll people's webhooks</h3>
+            <p class="text-gray-300 mb-4">enter a webhook url the message and wow</p>
             <a href="webspam.html" class="gradient-button">Send a Webhook</a>
         </div>
     </section>
