--- a/asian/homepage.html
+++ b/asian/homepage.html
@@ -60,7 +60,7 @@
   <h3>this will become a unblocked games</h3>
   <h4>creator is someone</h4>
 
-  <h1><a href="https://docs.google.com/forms/d/1AryKFpXYIE6HT7FgrUOUb3hEB4GAI0JW0URWDjkxSIQ">googleform for ideas of games to add and code help</a></h1>
+  <h1><a href="guthib.com">e</a></h1>
 
   <h3><a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">CLICK HERE!!!</a></h3>
   <a href="dinosaur-gme.html">dinosaur-gme</a>
