--- a/index.html
+++ b/index.html
@@ -141,18 +141,18 @@
 </head>
 <body>
 
-    <!-- Header Section -->
+    <!-- the sexy header -->
     <header class="text-center py-16">
         <h1 class="header-title mb-6">
             Welcome to Stickman's site.
         </h1>
-        <p class="text-xl mb-6">Here’s a collection of my random projects.</p>
-        <p class="text-lg">Take a look, have some fun!</p>
+        <p class="text-xl mb-6">Here’s a collection of my stuff.</p>
+        <p class="text-lg">Take a look, idk</p>
     </header>
 
-    <!-- User Name Input -->
+    <!-- enter your name or you are racist -->
     <section class="container mx-auto text-center py-12">
-        <h2 class="section-header">What's your name?</h2>
+        <h2 class="section-header">What is ur namee</h2>
         <form id="nameForm" class="flex flex-col items-center">
             <input type="text" id="nameInput" class="input-field" placeholder="Enter your name" required>
             <button type="submit" class="btn mt-4">Submit</button>
@@ -160,62 +160,62 @@
         <p id="greetingMessage" class="mt-4 text-lg text-gray-400"></p>
     </section>
 
-    <!-- Featured Projects -->
+    <!-- stuff i feature -->
     <section class="container mx-auto py-12">
-        <h2 class="section-header">Featured Projects</h2>
+        <h2 class="section-header">Featured Stuff</h2>
         <div class="project-card-container">
-            <!-- Webordnilap Project -->
+            <!-- emordnilap (first one to move is gay) -->
             <div class="project-card">
                 <h3>Webordnilap</h3>
-                <p>A fun little online palindrome generator</p>
-                <a href="emordnilap.html" class="gradient-button">Give it a try</a>
+                <p>just a palindrome in the web</p>
+                <a href="emordnilap.html" class="gradient-button">do a palindrome</a>
             </div>
 
-            <!-- Text Scrambler -->
+            <!-- i hate text -->
             <div class="project-card">
                 <h3>Text Scrambler</h3>
-                <p>Make your text all jumbled up!</p>
-                <a href="scramble.html" class="gradient-button">Scramble some text</a>
+                <p>make your text look bad</p>
+                <a href="scramble.html" class="gradient-button">Ruin your text</a>
             </div>
 
             <!-- FreeVRAM Joke -->
             <div class="project-card">
                 <h3>FreeVRAM</h3>
-                <p>Get some "free" VRAM (because why not?)</p>
-                <a href="vram.html" class="gradient-button">Claim Free VRAM</a>
+                <p>get your vram</p>
+                <a href="vram.html" class="gradient-button">get vram</a>
             </div>
 
-            <!-- UnbI0ck3d Gmes -->
+            <!-- XDD -->
             <div class="project-card">
-                <h3>Unblocked Gmes</h3>
-                <p>Play unblocked gmes during school!</p>
-                <a href="asian/homepage.html" class="gradient-button">Play Unblocked Gmes</a>
+                <h3>Gmes</h3>
+                <p>unblocked!!!!!!!!!</p>
+                <a href="asian/homepage.html" class="gradient-button"> Gmes</a>
             </div>
 
             <!-- DVD Screensaver but it's ur text xd -->
             <div class="project-card">
                 <h3>DVD Screensaver but it's ur text xd</h3>
-                <p>Ever wanted that classic DVD screensaver, but with your own text? Now you can!</p>
-                <a href="dvd.html" class="gradient-button">Try it out</a>
+                <p>ok idk!</p>
+                <a href="dvd.html" class="gradient-button">save your screen</a>
             </div>
         </div>
     </section>
 
-    <!-- WebSpam Section -->
+    <!-- xddd -->
     <section class="container mx-auto py-12">
         <div class="project-card">
-            <h3 class="text-2xl font-semibold mb-4">WebSpam</h3>
-            <p class="text-gray-300 mb-4">Ever wanted to mess with a webhook? Now you can!</p>
-            <a href="webspam.html" class="gradient-button">Send a Webhook</a>
+            <h3 class="text-2xl font-semibold mb-4">discord webhook tool</h3>
+            <p class="text-gray-300 mb-4">wanna use a ratelimited webhook spammer with a broken delay?</p>
+            <a href="webspam.html" class="gradient-button">ok</a>
         </div>
     </section>
 
-    <!-- Confetti Effect Script -->
+    <!-- Confetti sucks -->
     <script>
         document.getElementById("nameForm").addEventListener("submit", function (e) {
             e.preventDefault();
             const name = document.getElementById("nameInput").value;
-            document.getElementById("greetingMessage").textContent = `Welcome, ${name}! Hope you enjoy your stay.`;
+            document.getElementById("greetingMessage").textContent = `welcome ${name}! explore.`;
 
             startConfetti();
         });
